--- a/DogsHouse.API/DogsHouse.API.csproj
+++ b/DogsHouse.API/DogsHouse.API.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DogsHouse.Core\DogsHouse.Core.csproj" />
+    <ProjectReference Include="..\DogsHouse.Infrastructure\DogsHouse.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
