--- a/DogsHouse.API/Properties/launchSettings.json
+++ b/DogsHouse.API/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "dogs",
       "applicationUrl": "https://localhost:7155;http://localhost:5250",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
