Documented the code

--- a/DogsHouse.API/appsettings.json
+++ b/DogsHouse.API/appsettings.json
@@ -8,6 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=Queue;Username=postgres;Password=developer2023"
+  },
+  "RateLimiting": {
+    "RequestsPerSecond": 10
   }
 
 }
