Modified the rate limiting middleware

--- a/DogsHouse.API/appsettings.json
+++ b/DogsHouse.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=Queue;Username=postgres;Password=developer2023"
+    "DefaultConnection": "Host=localhost;Port=5433;Database=DogHouse;Username=postgres;Password=developer2023"
   },
   "RateLimiting": {
     "RequestsPerSecond": 10
