Modified tests and cleaned the project files

--- a/DogsHouse.API/appsettings.json
+++ b/DogsHouse.API/appsettings.json
@@ -10,7 +10,9 @@
     "DefaultConnection": "Host=localhost;Port=5433;Database=DogHouse;Username=postgres;Password=developer2023"
   },
   "RateLimiting": {
-    "RequestsPerSecond": 10
+    "PermitLimit": 10, // e.g For example, to allow 10 requests per 30 seconds:
+    "Window": 30,
+    "QueueLimit": 0
   }
 
 }
