Added Read Me file

--- a/DogsHouse.API/appsettings.json
+++ b/DogsHouse.API/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=DogHouse;Username=postgres;Password=developer2023"
   },
+  "DatabaseProvider": "PostgreSQL",
   "RateLimiting": {
     "PermitLimit": 10, // e.g For example, to allow 10 requests per 30 seconds:
     "Window": 30,
