--- a/DogsHouse.API/appsettings.json
+++ b/DogsHouse.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=DogHouse;Username=postgres;Password=developer2023"
+    "DefaultConnection": "Host=localhost;Database=dogshouse;Username=your_username;Password=your_password;"
   },
   "DatabaseProvider": "PostgreSQL",
   "RateLimiting": {
